@@ -6,14 +6,12 @@
 package software.amazon.smithy.lsp;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import software.amazon.smithy.build.model.SmithyBuildConfig;
 import software.amazon.smithy.model.node.Node;
 import software.amazon.smithy.model.node.NodeMapper;
@@ -25,10 +23,12 @@ public final class TestWorkspace {
     private static final NodeMapper MAPPER = new NodeMapper();
     private final Path root;
     private SmithyBuildConfig config;
+    private final String name;
 
-    private TestWorkspace(Path root, SmithyBuildConfig config) {
+    private TestWorkspace(Path root, SmithyBuildConfig config, String name) {
         this.root = root;
         this.config = config;
+        this.name = name;
     }
 
     /**
@@ -40,6 +40,10 @@ public final class TestWorkspace {
 
     public SmithyBuildConfig getConfig() {
         return config;
+    }
+
+    public String getName() {
+        return name;
     }
 
     /**
@@ -56,7 +60,7 @@ public final class TestWorkspace {
      */
     public void addModel(String relativePath, String model) {
         try {
-            Files.write(root.resolve(relativePath), model.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(root.resolve(relativePath), model);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -99,7 +103,7 @@ public final class TestWorkspace {
      */
     public static TestWorkspace emptyWithDirSource() {
         return builder()
-                .withSourceDir(new Dir().path("model"))
+                .withSourceDir(new Dir().withPath("model"))
                 .build();
     }
 
@@ -131,7 +135,7 @@ public final class TestWorkspace {
         List<Dir> sourceDirs = new ArrayList<>();
         List<Dir> importDirs = new ArrayList<>();
 
-        public Dir path(String path) {
+        public Dir withPath(String path) {
             this.path = path;
             return this;
         }
@@ -172,14 +176,22 @@ public final class TestWorkspace {
 
         private static void writeModels(Path toDir, Map<String, String> models) throws Exception {
             for (Map.Entry<String, String> entry : models.entrySet()) {
-                Files.write(toDir.resolve(entry.getKey()), entry.getValue().getBytes(StandardCharsets.UTF_8));
+                Files.writeString(toDir.resolve(entry.getKey()), entry.getValue());
             }
         }
     }
 
     public static final class Builder extends Dir {
         private SmithyBuildConfig config = null;
+        private String name = "";
+
         private Builder() {}
+
+        @Override
+        public Builder withPath(String path) {
+            this.path = path;
+            return this;
+        }
 
         @Override
         public Builder withSourceFile(String filename, String model) {
@@ -210,6 +222,11 @@ public final class TestWorkspace {
             return this;
         }
 
+        public Builder withName(String name) {
+            this.name = name;
+            return this;
+        }
+
         public TestWorkspace build() {
             try {
                 if (path == null) {
@@ -220,11 +237,11 @@ public final class TestWorkspace {
 
                 List<String> sources = new ArrayList<>();
                 sources.addAll(sourceModels.keySet());
-                sources.addAll(sourceDirs.stream().map(d -> d.path).collect(Collectors.toList()));
+                sources.addAll(sourceDirs.stream().map(d -> d.path).toList());
 
                 List<String> imports = new ArrayList<>();
                 imports.addAll(importModels.keySet());
-                imports.addAll(importDirs.stream().map(d -> d.path).collect(Collectors.toList()));
+                imports.addAll(importDirs.stream().map(d -> d.path).toList());
 
                 if (config == null) {
                     config = SmithyBuildConfig.builder()
@@ -237,7 +254,7 @@ public final class TestWorkspace {
 
                 writeModels(root);
 
-                return new TestWorkspace(root, config);
+                return new TestWorkspace(root, config, name);
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
@@ -248,7 +265,7 @@ public final class TestWorkspace {
         String configString = Node.prettyPrintJson(MAPPER.serialize(config));
         Path configPath = root.resolve("smithy-build.json");
         try {
-            Files.write(configPath, configString.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(configPath, configString);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
